[package]
name = "prush"
version = "1.0.0"
authors = ["johker <johannes.kern@zoho.com>"]
edition = "2018"
description = "Prush is a Rust based interpreter for Push programs."
repository = "https://github.com/johker/prush/"
license = "MIT OR Apache-2.0"
keywords = ["push", "evolutionary computation", "stack-based execution architecture"]
readme = "README.md"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_distr = "0.4.1"
names = "0.10.0"
